[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0.686275, 0.796078, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 288.0
margin_right = 250.0
margin_bottom = 500.0

[node name="Single Player" type="Button" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
text = "Single Player Race"

[node name="Track Builder" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 104.0
rect_min_size = Vector2( 150, 50 )
text = "Track Builder"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 150.0
margin_bottom = 158.0
rect_min_size = Vector2( 150, 50 )
text = "Credits"

[node name="Close Game" type="Button" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 150.0
margin_bottom = 212.0
rect_min_size = Vector2( 150, 50 )
text = "Quit App"

[connection signal="pressed" from="VBoxContainer/Single Player" to="." method="_on_Single_Player_pressed"]
[connection signal="pressed" from="VBoxContainer/Track Builder" to="." method="_on_Track_Builder_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Close Game" to="." method="_on_Close_Game_pressed"]
